--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="green_600">#16A34A</color>
     <color name="orange_600">#EA580C</color>
+    <color name="red_500">#F44336</color>
 
     <!-- TSX Color Palette -->
     <!-- Backgrounds -->
